# LeicaDiscord

./: .env.example  .gitignore  KenR-LeicaBot.csproj  LeicaD.sln  Program.cs  README.md  appsettings.json
Data/: AppConfig.cs  DbContext.cs
LeicaD.KenR/: KenR-LeicaBot.csproj  KenR-LeicaBot.sln  LICENSE  Program.cs  README.md  appsettings.json
LeicaD.KenR.Rust/: .env  .env.example  Cargo.toml
LeicaD.KenR.Rust/KenR/: Cargo.toml  main_old.rs
LeicaD.KenR.Rust/KenR/src/: gallery_cleaner.rs  main.rs  quote_service.rs
LeicaD.KenR.Rust/KenR/src/commands/: mod.rs  purge.rs
LeicaD.KenR/Data/: AppConfig.cs
LeicaD.KenR/Databases/: kenr_out_of_context_quotes.txt  kenr_out_of_context_quotes_BACKUP.txt
LeicaD.KenR/Modules/: AdminCommandsModule.cs  FunCommandsModule.cs
LeicaD.KenR/Services/: ChannelPurgeService.cs  CommandHandlingService.cs  KenRQuoteService.cs  MemberQuoteService.cs  RoleService.cs
LeicaD.Web/: LeicaD.Web.csproj  Program.cs  Startup.cs  _Imports.razor  appsettings.json
LeicaD.Web.Ang/: LeicaD.Web.Ang.csproj  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
LeicaD.Web.Ang/ClientApp/: README.md  angular.json  package-lock.json  package.json
LeicaD.Web.Ang/ClientApp/src/: index.html
LeicaD.Web.Ang/Controllers/: AdminController.cs  OidcConfigurationController.cs  WeatherForecastController.cs
LeicaD.Web.Ang/Data/: ApplicationDbContext.cs
LeicaD.Web.Ang/Data/Migrations/: 00000000000000_CreateIdentitySchema.Designer.cs  00000000000000_CreateIdentitySchema.cs  20210725075424_KenRQuoteAndRoles.Designer.cs  20210725075424_KenRQuoteAndRoles.cs  ApplicationDbContextModelSnapshot.cs
LeicaD.Web.Ang/Models/: ApplicationUser.cs  User.cs  WeatherForecast.cs
LeicaD.Web.Ang/Pages/: Error.cshtml.cs  _ViewImports.cshtml
LeicaD.Web.Ang/Pages/Shared/: _LoginPartial.cshtml
LeicaD.Web.Ang/Properties/: launchSettings.json
LeicaD.Web.Ang/Services/: AdminUserService.cs  IAdminUserService.cs  KenRQuoteService.cs
LeicaD.Web/Areas/Identity/: IdentityHostingStartup.cs  RevalidatingIdentityAuthenticationStateProvider.cs
LeicaD.Web/Data/: AdminUserService.cs  ApplicationDbContext.cs  KenRQuoteService.cs  WeatherForecast.cs  WeatherForecastService.cs
LeicaD.Web/Data/DTOs/: User.cs
LeicaD.Web/Data/Migrations/: 00000000000000_CreateIdentitySchema.Designer.cs
LeicaD.Web/Database/: ApplicationDbContext.cs
LeicaD.Web/Pages/: Admin.razor  Error.cshtml  Error.cshtml.cs  FetchData.razor  Index.razor  KenRQuotes.razor  KenRQuotes.razor.css  _Host.cshtml  _ViewImports.cshtml
LeicaD.Web/Properties/: launchSettings.json
LeicaD.Web/Shared/: NavMenu.razor
Modules/: AdminCommandsModule.cs  FunCommandsModule.cs  PublicModule.cs
Services/: ChannelPurgeService.cs  DynamicTextCommandService.cs  KenRQuoteService.cs  RoleService.cs
bot/: Cargo.toml
bot/src/: handler.rs  main.rs  sharedmanagercontainer.rs
bot/src/commands/: command_register.rs  command_service.rs  meta.rs  mod.rs  quote.rs  slash_role.rs
bot/src/message_handlers/: lesser_cameras.rs  mod.rs
gallery_cleaner/: Cargo.toml
gallery_cleaner/src/: main.rs
web/: index.html
(+55 files in other folders)
