[package]
name = "kenr_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.9"
rusqlite = { version = "0.27.0", features = ["chrono"] }
anyhow = "1.0"
chrono = "0.4.19"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = ["client", "standard_framework", "gateway", "rustls_backend", "model", "unstable_discord_api"]
