[package]
name = "kenr_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rusqlite = { version = "0.28.0", features = ["chrono"] }
anyhow = "1.0.69"
chrono = "0.4.23"
rand = "0.8.5"

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "standard_framework", "gateway", "rustls_backend", "model", "unstable_discord_api"]
